--- a/day_four.ipynb
+++ b/day_four.ipynb
@@ -182,10 +182,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.360000000000003"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def square(number):\n",
+    "    squared_number = number**2\n",
+    "    return squared_number\n",
+    "\n",
+    "square(4.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0 kg\n",
+      "4.55 kg\n",
+      "26.67 °C\n",
+      "-40.0 °C\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_to_kilograms(weight):\n",
+    "    kilos = weight/2.2\n",
+    "    return round(kilos,2)\n",
+    "\n",
+    "print(f\"{convert_to_kilograms(4.4)} kg\")\n",
+    "print(f\"{convert_to_kilograms(10)} kg\")\n",
+    "\n",
+    "def convert_to_celsius(temp):\n",
+    "    celsius = (temp - 32)*(5/9)\n",
+    "    return round(celsius,2)\n",
+    "\n",
+    "print(f\"{convert_to_celsius(80)} \\N{DEGREE SIGN}C\")\n",
+    "print(f\"{convert_to_celsius(-40)} \\N{DEGREE SIGN}C\")"
+   ]
   }
  ],
  "metadata": {
