added comments to attendance code

--- a/attendance.ipynb
+++ b/attendance.ipynb
@@ -6,13 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# writing to csv file so importing csv\n",
     "import csv\n",
     "\n",
+    "# open the file with the student names listed\n",
     "with open('student_list.txt', 'r') as student_file:\n",
     "    for student in student_file:\n",
+    "        # ask for attendance of each student in the file\n",
     "        here = input(f\"Is {student} present?\")\n",
+    "        # create a list showing the attendance of each student and stripping the newline from each student name\n",
     "        attendance = [student.rstrip('\\n'), here]\n",
     "        with open('attendance_list.csv', 'a') as attendance_file:\n",
+    "            # appending the attendance list to a csv file\n",
     "            character_writer = csv.writer(attendance_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
     "            character_writer.writerow(attendance)"
    ]
