4th november lessons

--- a/yfinance.ipynb
+++ b/yfinance.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
     "\n",
     "# data splitting\n",
     "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.2, random_state=33)\n",
-    "7\n",
+    "\n",
     "# feature scaling\n",
     "# standard scaler - mean of 0, variance of 1\n",
     "# minmax scaler - min, max of (0,1)\n",
@@ -367,21 +367,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9997630412134927\n",
-      "0.3894010492967473\n"
+      "0.8085028194004662\n",
+      "314.69271159746813\n"
      ]
     }
    ],
    "source": [
     "# support vector regressor\n",
-    "svr = SVR(kernel='linear')\n",
+    "svr = SVR(kernel='poly')\n",
     "svr.fit(x_train,y_train)\n",
     "y_pred_svr = svr.predict(x_test)\n",
     "\n",
