--- a/classification.ipynb
+++ b/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "60   Seafood  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,8 +222,9 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn import metrics\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
     "food_data = pd.read_csv('food_data.csv')\n",
     "food_data.head()\n",
@@ -303,6 +304,257 @@
     "db = pd.DataFrame({'Actual': y_test, 'Predicted': y_pred_log})\n",
     "\n",
     "metrics.accuracy_score(y_test,y_pred_log)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fruit_name</th>\n",
+       "      <th>fruit_subtype</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>color_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>apple</td>\n",
+       "      <td>granny_smith</td>\n",
+       "      <td>192</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>0.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>apple</td>\n",
+       "      <td>granny_smith</td>\n",
+       "      <td>180</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>0.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>apple</td>\n",
+       "      <td>granny_smith</td>\n",
+       "      <td>176</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>86</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>0.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>mandarin</td>\n",
+       "      <td>84</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>0.79</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  fruit_name fruit_subtype  mass  width  height  color_score\n",
+       "0      apple  granny_smith   192    8.4     7.3         0.55\n",
+       "1      apple  granny_smith   180    8.0     6.8         0.59\n",
+       "2      apple  granny_smith   176    7.4     7.2         0.60\n",
+       "3   mandarin      mandarin    86    6.2     4.7         0.80\n",
+       "4   mandarin      mandarin    84    6.0     4.6         0.79"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('fruit_types.csv')\n",
+    "\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = LabelEncoder()\n",
+    "\n",
+    "fruit_name_encoded = encoder.fit_transform(data.iloc[:,0])\n",
+    "fruit_subtype_encoded = encoder.fit_transform(data.iloc[:,1])\n",
+    "mass_encoded = encoder.fit_transform(data.iloc[:,2])\n",
+    "width_encoded = encoder.fit_transform(data.iloc[:,3])\n",
+    "height_encoded = encoder.fit_transform(data.iloc[:,4])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fruit_name</th>\n",
+       "      <th>fruit_subtype</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>27</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>25</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fruit_name  fruit_subtype  mass  width  height\n",
+       "0           0              3    30     20       8\n",
+       "1           0              3    27     19       4\n",
+       "2           0              3    25     14       7\n",
+       "3           2              4     3      4       3\n",
+       "4           2              4     2      2       2"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data = list(zip(fruit_name_encoded,fruit_subtype_encoded,mass_encoded,width_encoded,height_encoded))\n",
+    "new_data = pd.DataFrame(new_data, columns=['fruit_name', 'fruit_subtype', 'mass', 'width', 'height'])\n",
+    "data_to_use = new_data.iloc[:,1:5]\n",
+    "data_to_target = new_data.iloc[:,0]\n",
+    "new_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train,x_test,y_train,y_test = train_test_split(data_to_use, data_to_target, test_size=0.2, random_state=123)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8333333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_model = KNeighborsClassifier(n_neighbors=3) # define kNN model with k=3\n",
+    "knn_model.fit(x_train, y_train) # fit kNN model\n",
+    "y_pred = knn_model.predict(x_test)\n",
+    "\n",
+    "print(\"Accuracy:\", metrics.accuracy_score(y_test, y_pred))"
    ]
   }
  ],
